--- a/src/sass/base/_basic.sass
+++ b/src/sass/base/_basic.sass
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Josefin+Slab|Pacifico')
 body
     background: red
-    background-image: url(../image/bg.jpg)
+    background-image: url(../image/bg2.jpg)
     background-attachment: fixed
     background-size: cover
     font-family: 'Josefin Slab', serif
