--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -25,7 +25,7 @@ html
         .container#main-container
             .col-sm-12
                 #profile
-                    img(src="assets/image/wandx.jpg", alt="").img-circle.img-responsive
+                    img(src="assets/image/wandx2.jpg", alt="").img-circle.img-responsive
                     #name
                         h1 wandy purnomo
                         h3 { web developer }
