--- a/src/sass/base/_basic.sass
+++ b/src/sass/base/_basic.sass
@@ -2,5 +2,8 @@
 body
     background-image: url(../image/bg2.jpg)
     background-attachment: fixed
+    -webkit-background-size: cover
+    -moz-background-size: cover
+    -o-background-size: cover
     background-size: cover
     font-family: 'Josefin Slab', serif
